CAMBIO DE IMG POR ICONOS FONT AWESOME

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
     <footer class="pie">
         <div class="copyright">&copy; 2019- Hello blue pale dot</div>
         <div class="redes">
-            <div  class="logo"><a href="https://www.spotify.com/ar/home/" target="#"><img src="Nueva_carpeta/png-transparent-spotify-computer-icons-streaming-media-music-home-icons-hand-logo-music-download.png" alt="spotify-logo"></a></div>
-            <div  class="logo"><a href="https://www.instagram.com/"  target="#"><img src="Nueva_carpeta/instagram_internet_media_network_social_icon_123258.png" alt="Instagram-logo"></a></div>
+            <div  class="logo"><a href="https://www.spotify.com/ar/home/" target="#"><i class="fab fa-spotify"></i></a></div>
+            <div  class="logo"><a href="https://www.instagram.com/"  target="#"><i class="fab fa-instagram"></i></a></div>
             <div  class="logo"><a href="https://twitter.com/?lang=es"  target="#"><i class="fab fa-twitter"></i></a></div>
-            <div  class="logo"><a href="https://www.facebook.com/"  target="#"><img src="Nueva_carpeta/png-clipart-logo-facebook-inc-round-logo-desktop-wallpaper-black-and-white-thumbnail.png" alt="Facebook-Logo"></a></div>
-            <div  class="logo"><a href="https://telegram.org/"  target="#"><img src="Nueva_carpeta/1766858341556105723-512.png" alt="Telegram-Logo"></a></div>
+            <div  class="logo"><a href="https://www.facebook.com/"  target="#"><i class="fab fa-facebook"></i></a></div>
+            <div  class="logo"><a href="https://telegram.org/"  target="#"><i class="fab fa-telegram"></i></a></div>
         </div>
     </footer>    
 </body>
